# agent-continuity-runtime

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
docs/: workflow-spec.md  workflow-spec.zh-CN.md
src/agent_continuity/: __init__.py  adapter_demo.py  adapters.py  cli.py  demo.py  lease.py  ledger.py  runtime.py  spec.py
tests/: test_adapters.py  test_distribution.py  test_runtime.py  test_spec.py
workflows/: quickstart.json
